@@ -1,6 +1,10 @@
-﻿2009-02-12 20:59:39 +0800
+2009-02-16 23:41:07 +0800
+* live的type参数说明
+* error的说明
+
+2009-02-12 20:59:39 +0800
 + jQuery.extend 增加deep参数
-+ serializeArray( ) longdesc
++ serializeArray() longdesc
 * jQuery.browser、jQuery.browser.version、jQuery.boxModel错别字
 
 2009-02-3 02:16:56 +0800
